veecle-os-runtime-macros/tests/ui/actor/generic/lifetime.stderr
error: #[actor] functions cannot be generic over a lifetime
 --> tests/ui/actor/generic/lifetime.rs:5:24
  |
5 | async fn with_lifetime<'a>(
  |                        ^^

error[E0425]: cannot find type `WithLifetime` in this scope
  --> tests/ui/actor/generic/lifetime.rs:15:18
   |
15 |         actors: [WithLifetime<'static>: &()],
   |                  ^^^^^^^^^^^^ not found in this scope

error[E0282]: type annotations needed
  --> tests/ui/actor/generic/lifetime.rs:14:13
   |
14 |       let _ = veecle_os_runtime::execute! {
   |  _____________^
15 | |         actors: [WithLifetime<'static>: &()],
16 | |     };
   | |_____^ cannot infer type
   |
   = note: this error originates in the macro `veecle_os_runtime::execute` (in Nightly builds, run with -Z macro-backtrace for more info)
